# aegis-scan

./: .gitignore  README.md  SKILL.md
aegis-core/: CLA.md  README.md  SKILL.md  pyproject.toml
aegis-core/aegis/: __init__.py  cli.py  mcp_server.py
aegis-core/aegis/crypto/: __init__.py  hasher.py  signer.py
aegis-core/aegis/models/: __init__.py  capabilities.py  lockfile.py  report.py  rules.py
aegis-core/aegis/policy/: __init__.py  rule_engine.py
aegis-core/aegis/reporter/: __init__.py  console_out.py  json_out.py
aegis-core/aegis/rules/: default_deny_binaries.yaml  default_deny_paths.yaml  sample_policy.yaml  trifecta_rules.yaml
aegis-core/aegis/rules/semgrep/: generic-secrets.yaml  javascript-security.yaml  python-security.yaml
aegis-core/aegis/scanner/: __init__.py  ast_parser.py  binary_detector.py  combo_analyzer.py  complexity_analyzer.py  config_analyzer.py  coordinator.py  dockerfile_analyzer.py  fix_suggestions.py  js_analyzer.py  llm_judge.py  persona_classifier.py  remediation_feedback.py  secret_scanner.py  semgrep_adapter.py  shadow_detector.py  shell_analyzer.py  skill_meta_analyzer.py  skill_taxonomy.py  social_engineering_scanner.py  steganography_scanner.py  tool_bucketing.py
aegis-core/aegis/verify/: __init__.py  standalone.py
aegis-core/tests/: test_ast_parser.py  test_ast_rebalance.py  test_binary_detector.py  test_cli.py  test_combo_analyzer.py  test_config_analyzer.py  test_coordinator.py  test_fix_suggestions.py  test_hardening_patterns.py  test_hasher.py  test_js_analyzer.py  test_mcp_server.py  test_pdf_research_enhancements.py  test_rule_engine.py  test_secret_scanner.py  test_semgrep_adapter.py  test_shell_analyzer.py  test_signer.py  test_skill_meta_analyzer.py  test_skill_taxonomy.py  test_social_engineering.py  test_standalone_verify_security.py  test_steganography_scanner.py  test_tool_bucketing.py  test_tool_extraction.py
aegis-core/tests/fixtures/binary_spawn/: spawner.py
aegis-core/tests/fixtures/config_skill/: config.yaml  settings.json
(+28 files in other folders)
